--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     <div class="wow zoomInUp container text-center">
         <h2 class="name example animation fadeInDown">Code Example</h2>
         <div class="row resume   ">
-
+            <div></div>
 
             <div class="col-lg-3 col-md-3">
                 <img src="./img/Partial.png" class="codexample" alt="">
