--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/styl.css">
+    <link rel="stylesheet" href="./css/bootstrap.css">
+      <link rel="stylesheet" href="./css/styl.css">
     <link rel="stylesheet" href="./css/animate.css">
+    <link rel="stylesheet" href="./css/media.css">
     <script src="./js/WOW.js"></script>
 </head>
 <body>
 <section id="AboutMe">
     <div class="container">
         <div class="row resume" id="summary">
-            <div class="col-md-6 .col-lg-6">
+            <div class="col-md-6 col-lg-6 col-sm-12">
                 <img src="./img/0.jpg" alt="" class="about">
                 <h2 class="name">
                     Temirov Mirlan
@@ -27,7 +27,7 @@
 
 
             </div>
-            <div class="col-md-6 .col-lg-6">
+            <div class="col-md-6 col-lg-6 col-sm-12">
                 <h1 class="title">About me</h1>
                 <p class="description">Hello! My name is Mirlan. I'm teaching HTML and CSS.
                     I like to make some Web sites and have group mates. We are teaching together.
@@ -43,7 +43,7 @@
 <section id="skill">
     <div class="container  text-center">
             <h2 class="wow zoomInUp name animation">Skills</h2>
-    <div class="row resume">
+    <div class="row resume media-s">
 
         <div class="col-6">
             <div class="progress-bar-wrapper">
@@ -103,7 +103,7 @@
 <section id=" codeExample">
     <div class="wow zoomInUp container text-center">
         <h2 class="name example animation fadeInDown">Code Example</h2>
-        <div class="row resume   ">
+        <div class="row resume media-s   ">
             <div></div>
 
             <div class="col-lg-3 col-md-3">
