--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 class="wow zoomInUp name animation">Skills</h2>
     <div class="row resume media-s">
 
-        <div class="col-6">
+        <div class="col-6 col-sm-12">
             <div class="progress-bar-wrapper">
                 <p class="progress-text">
                     HTML
@@ -76,7 +76,7 @@
 
 
         </div>
-        <div class="col-6">
+        <div class="col-6 col-sm-12">
             <div class="progress-bar-wrapper">
                 <p class="progress-text">
                     Git
